--- a/_posts/tutorials/2015-06-30-bioinformatics.html
+++ b/_posts/tutorials/2015-06-30-bioinformatics.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/bioinformatics
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/bioinformatics
 description: 5 popular visualizations that bioinformaticians use in exploratory analysis of genomic data.
 name: Visualizing biological data&#58; exploratory bioinformatics with plot.ly
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
